@@ -1,3 +1,8 @@
+2003-10-06  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* elf-eh-frame.c (_bfd_elf_write_section_eh_frame): Pad the
+	last CIE/FDE if needed.
+
 2003-10-06  Matt Thomas <matt@3am-software.com>
 
          config.bfd: Move the hppa*-*-netbsd* case to the hppa*-*-linux* case.
